--- a/todo
+++ b/todo
@@ -1,3 +1,2 @@
-1. Add message delay functionality.
-2. Go through the requirements document.
-3. Create buttons for orderings in the message window title.
+1. Create buttons for orderings in the message window title.
+2. Modify user json to accomadate for different orderings.
