--- a/todo
+++ b/todo
@@ -1,2 +1,3 @@
-1. Create buttons for orderings in the message window title.
-2. Modify user json to accomadate for different orderings.
+1. Modify user json to accomadate for different orderings. (Design and implement)
+2. Change frontend according to the new user json.
+3. Modify API in seer for orderings.
